// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCompileRequest createCompileRequest 1`] = `
{
  "targets": [],
}
`;

exports[`createCompileRequest createCompileRequest 2`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "words",
      "sources": [
        "src/words.txt",
      ],
      "targetDirectory": ".",
    },
  ],
}
`;

exports[`createCompileRequest createCompileRequest 3`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "words",
      "sources": [
        "src/words.txt",
      ],
      "targetDirectory": "out",
    },
    {
      "compress": false,
      "format": "plaintext",
      "name": "cities",
      "sources": [
        "src/cities.txt",
      ],
      "targetDirectory": "out",
    },
  ],
}
`;

exports[`createCompileRequest createCompileRequest 4`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "combo",
      "sources": [
        "src/words.txt",
        "src/cities.txt",
      ],
      "targetDirectory": "out",
    },
  ],
}
`;
